# Focus-Backdrop

./: README.md  pyproject.toml  pyside6_deploy.toml  requirements.txt
scripts/: dev_run.sh  sync_version.py
src/focus_backdrop/: __main__.py  _version.py  main.py
src/focus_backdrop/core/: config.py  themes.py
src/focus_backdrop/gui/: dialogs.py  main_window.py
